--- a/store/app/design/frontend/icu/icu/template/page/html/head.phtml
+++ b/store/app/design/frontend/icu/icu/template/page/html/head.phtml
@@ -29,16 +29,21 @@
 	var base_url 	= "<?= $this->getUrl(''); ?>";
 	var skin_url	= "<?= $this->getSkinUrl(''); ?>";
 </script>
-<meta http-equiv="Content-Type" content="<?php echo $this->getContentType() ?>" />
-<meta name="description" content="<?php echo htmlspecialchars($this->getDescription()) ?>" />
-<meta name="keywords" content="<?php echo htmlspecialchars($this->getKeywords()) ?>" />
-<meta name="robots" content="<?php echo htmlspecialchars($this->getRobots()) ?>" />
-<link rel="icon" href="<?php echo $this->getSkinUrl('favicon.ico') ?>" type="image/x-icon" />
-<link rel="shortcut icon" href="<?php echo $this->getSkinUrl('favicon.ico') ?>" type="image/x-icon" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<meta content="initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport"/>
+<!--[if lt IE 9]>
+	<script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+<meta http-equiv="Content-Type" content="<?= $this->getContentType() ?>" />
+<meta name="description" content="<?= htmlspecialchars($this->getDescription()) ?>" />
+<meta name="keywords" content="<?= htmlspecialchars($this->getKeywords()) ?>" />
+<meta name="robots" content="<?= htmlspecialchars($this->getRobots()) ?>" />
+<link rel="icon" href="<?= $this->getSkinUrl('favicon.ico') ?>" type="image/x-icon" />
+<link rel="shortcut icon" href="<?= $this->getSkinUrl('favicon.ico') ?>" type="image/x-icon" />
 
-<?php echo $this->getCssJsHtml() ?>
-<?php echo $this->getChildHtml() ?>
-<?php echo $this->helper('core/js')->getTranslatorScript() ?>
-<?php echo $this->getIncludes() ?>
+<?= $this->getCssJsHtml() ?>
+<?= $this->getChildHtml() ?>
+<?= $this->helper('core/js')->getTranslatorScript() ?>
+<?= $this->getIncludes() ?>
 
 </script>
