--- a/store/app/design/frontend/icu/icu/template/page/product.phtml
+++ b/store/app/design/frontend/icu/icu/template/page/product.phtml
@@ -32,44 +32,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<?php echo $this->getChildHtml('head') ?>
-<link href="<?php echo $this->getSkinUrl('css/facebox.css') ?>" media="screen" rel="stylesheet" type="text/css" />
+<?= $this->getChildHtml('head') ?>
 
-<script src="<?php echo $this->getSkinUrl('js/facebox.js') ?>" type="text/javascript"></script>
-<script type="text/javascript">
-    jQuery(document).ready(function($) {
-      $('a[rel*=facebox]').facebox() 
-    })
-</script>
-
-<script src="<?php echo $this->getSkinUrl('js/menu.js') ?>" type="text/javascript"></script>
-<script type="text/javascript" src="<?php echo $this->getSkinUrl('js/jquery.betterTooltip.js'); ?>"></script>
+<script src="<?= $this->getSkinUrl('js/menu.js') ?>" type="text/javascript"></script>
+<script type="text/javascript" src="<?= $this->getSkinUrl('js/jquery.betterTooltip.js'); ?>"></script>
 </head>
 <body>
-<?php echo $this->getChildHtml('after_body_start') ?>
-<?php echo $this->getChildHtml('global_notices') ?>
+<?= $this->getChildHtml('after_body_start') ?>
+<?= $this->getChildHtml('global_notices') ?>
 <!-- oc: product HEADER AND NAVIGATION SECTION -->
-<?php echo $this->getChildHtml('header') ?>
+<?= $this->getChildHtml('header') ?>
 <!-- /HEADER AND NAVIGATION SECTION -->
-<div class="clr"></div>
+
 <!-- BODY SECTION -->
-<div id="body_section">
+<div id="content">
   <!-- body container -->
-	<?php //echo $this->getChildHtml('global_messages') ?>
-	<?php echo $this->getChildHtml('content') ?> 
+
+	<?= $this->getChildHtml('content') ?> 
   <!-- /body container -->
 
-  <div class="clr"></div>
 </div>
 <!-- /BODY SECTION -->
-<div class="clr"></div>
+
 <!-- FOOTER SECTION -->
-<?php echo $this->getChildHtml('footer') ?>
+<?= $this->getChildHtml('footer') ?>
 <!-- /FOOTER SECTION -->
-<?php echo $this->getChildHtml('before_body_end') ?>
-<div class="clr"></div>
-<script type="text/javascript">
-	$(".tTip").betterTooltip();
-</script>
+
 </body>
 </html>
