--- a/store/skin/frontend/icu/icu/css/style.css
+++ b/store/skin/frontend/icu/icu/css/style.css
@@ -78,6 +78,7 @@ input[type="button"].btn01 {margin:0; padding:0; width:160px; height:30px; backg
 	text-transform: uppercase;
 	font-size: 2.0em;
 	margin: 10px;
+	margin-left: 0;
 	padding: 20px;
 	color: white;
 	border: none;
