Looking good (and by good i mean better).

--- a/store/app/design/frontend/icu/icu/template/catalog/product/view.phtml
+++ b/store/app/design/frontend/icu/icu/template/catalog/product/view.phtml
@@ -158,20 +158,19 @@
 
 	<div class="span3 product-detail-box">
                 <h5>SECURE ONLINE PAYMENT</h5>
-                <p>All payment secured by PayPal. We accept the following payment methods: <img src="<?= $this->getSkinUrl('images/creditcardsoffered.jpg'); ?>"></p>
-				<a href="http://paypal.com" class="learn-more-btn pull-right" title="More Info">+Learn More</a>
+                <p>All Payment secured via PayPal. We accept the following payment methods: <img src="<?= $this->getSkinUrl('images/creditcardsoffered.jpg'); ?>">  <br />Please verify you have chosen the currency of your region.</p>
+				<a href="<?= $this->getBaseUrl(); ?>/terms" class="learn-more-btn pull-right" title="Learn More">+Learn More</a>
 	</div>
 	
 	<div class="span3 product-detail-box">
                 <h5>WORLDWIDE SHIPPING</h5>
-                <p>Your ICU - In Paris is shipped within 24 hours of purchase directly from the designer's atelier. One shipping fee charged.</p>
+                <p>Certain ICU Product is made to order and/or customizable. For more information please contact us: <a href="mailto:sales@icuinparis.com" target="_blank">sales@icuinparis.com</a></p>
 				<a href="<?= $this->getBaseUrl(); ?>/shipping" class="learn-more-btn pull-right" title="Learn More">+Learn More</a>
 	</div>
 	<div class="span3 product-detail-box">
                 <h5>CUSTOMER SERVICE</h5>                
-                <p>e-mail: <a href="mailto:info@icuinparis.com" target="_blank">info@icuinparis.com</a><br>
-                    skype: <a href="skype:icuinparis?chat">icuinparis</a><br>
-                    mon-fri, 9am-6pm CET</p>
+                <p>We welcome you to contact us with questions, feedback, designer submissions and/or custom orders.<br />
+                	e-mail: <a href="mailto:info@icuinparis.com" target="_blank">info@icuinparis.com</a></p>
 				<a href="<?= $this->getBaseUrl(); ?>/contact-us.html" class="learn-more-btn pull-right" title="Learn More">+Learn More</a>
 	</div>	
 	<div class="span3 product-detail-box">
