--- a/store/app/design/frontend/icu/icu/template/designs/designs.phtml
+++ b/store/app/design/frontend/icu/icu/template/designs/designs.phtml
@@ -90,8 +90,10 @@ if($urlpieces[4] && $urlpieces[4] == "?success%2F="): ?>
 	      <input class="icu-btn span6 offset3"  type="submit" value="Submit & Mercí"  />
       </div>
     </form>
+
 <script>
 //<![CDATA[
-	var dataForm = new VarienForm('design-submit-form', true);
+	var designerSumissionForm         = new VarienForm('design-submit-form', true);
+
 //]]>
 </script>
