--- a/php/ored-styles.css
+++ b/php/ored-styles.css
@@ -164,9 +164,44 @@ h1{
     display: inline;
     margin: 5px;
 }
-
+.modal{
+    border-radius: 0;
+    -moz-border-radius: 0;
+}
 #newsletter_modal{
     display: none;
+}
+.modal-header h3{
+    color: #000;
+    font-family: "Gotham-Light", sans-serif;
+
+}
+.modal-body p{
+    color: #777;
+    font-size: 1.4em;
+}
+.modal-footer a{
+
+    background-color: #84BCBC;
+    font-family: "Gotham-Light", sans-serif;
+    text-transform: uppercase;
+    font-size: 2.0em;
+    margin: 10px;
+    margin-left: 0;
+    padding: 20px;
+    color: white;
+    border: none;
+    display: block;
+    text-align: center;
+    width: 50px;
+    margin: 0 auto;
+
+}
+
+.modal-footer a:hover{
+    color: white;
+    text-decoration: none;
+    background-color: #a0a0a0;
 }
 /*****************************************************************************
 /*****************************************************************************
