--- a/store/app/design/frontend/icu/icu/template/catalog/category/page.phtml
+++ b/store/app/design/frontend/icu/icu/template/catalog/category/page.phtml
@@ -28,9 +28,9 @@
  * @deprecated  after 1.4.0.0-alpha3
  */
 ?>
-<div class="page-title">
-    <h1><?php echo $this->getTitle() ?></h1>
+<div id="headline" class="row">
+    <h1><?= $this->getTitle(); ?></h1>
 </div>
 <div>
-    <?php echo $this->getContent() ?>
+    <?= $this->getContent(); ?>
 </div>
