--- a/store/app/design/frontend/icu/icu/template/page/template/container.phtml
+++ b/store/app/design/frontend/icu/icu/template/page/template/container.phtml
@@ -30,6 +30,6 @@
  */
 ?>
 <div class="headline">
-    <h1><?php echo $this->getTitle() ?></h1>
+    <h1><?= $this->getTitle() ?></h1>
 </div>
-<?php echo $this->getChildHtml() ?>
+<?= $this->getChildHtml() ?>
