--- a/store/skin/frontend/icu/icu/css/style.css
+++ b/store/skin/frontend/icu/icu/css/style.css
@@ -71,7 +71,9 @@ body {
 
 input[type="button"].btn01 {margin:0; padding:0; width:160px; height:30px; background:url(../images/btn-01.gif) no-repeat top; border:none; font-family:Arial, Helvetica, sans-serif; font-size:11px; color:#FFFFFF; text-transform:uppercase; cursor:pointer;}
 
-
+.page-title{
+	margin-left: -20px;
+}
 .icu-btn{
 	background-color: #84BCBC;
 	font-family: "Gotham-Light", sans-serif;
